[package]
name = "b2-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8.12"
aws-credential-types = { version = "1.2.11", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.118.0"
aws-sdk-s3-transfer-manager = "0.1.3"
aws-smithy-runtime-api = "1.9.3"
bytes = "1.11.0"
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
hex = "0.4.3"
http = "1.4.0"
mimetype-detector = "0.3.4"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["local-offset", "formatting"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "fs", "io-util"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "time"] }
tracing-tree = "0.4.1"
